// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/nebulas/box renders a <Box /> 1`] = `
.c0 {
  display: inline-block;
  margin: 20px;
  padding: 32px;
  background-color: #FFFFFF;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
}

<div
  className="c0"
/>
`;

exports[`components/nebulas/box renders a black <Box /> 1`] = `
.c0 {
  display: inline-block;
  margin: 20px;
  padding: 32px;
  background-color: #000;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
}

<div
  className="c0"
  color="#000"
/>
`;
